# mc-option-pricing-engine

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  example_quotes.json  heston_calibration_demo.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: sample_quotes.csv
notebooks/: README.md
results/: calib_fast.json
scripts/: american_demo.py  asian_demo.py  barrier_demo.py  bench_heston_schemes.py  benchmark_variance_reduction.py  calibrate_heston.py  convergence_demo.py  demo_all.py  greeks_convergence_demo.py  heston_smile_demo.py  iv_smile_demo.py  market_smile_yahoo.py  mc_price.py  multiasset_demo.py  plot_convergence.py  qmc_benchmark.py  qmc_dim_guard_demo.py  runner.py  synthetic_surface_demo.py
src/mc_pricer/: __init__.py  _version.py  cli.py
src/mc_pricer/analytics/: __init__.py  black_scholes.py  implied_vol.py  market_iv.py
src/mc_pricer/calibration/: __init__.py  heston_calibration.py
src/mc_pricer/data/: __init__.py  yahoo_options.py
src/mc_pricer/experiments/: __init__.py  artifacts.py  io.py  run.py  types.py
src/mc_pricer/greeks/: __init__.py  finite_diff.py  pathwise.py  types.py
src/mc_pricer/models/: __init__.py  gbm.py  heston.py  multi_gbm.py
src/mc_pricer/payoffs/: __init__.py  multi_asset.py  path_dependent.py  plain_vanilla.py
src/mc_pricer/pricers/: __init__.py  heston_monte_carlo.py  lsm.py  monte_carlo.py  multi_asset_monte_carlo.py
src/mc_pricer/rng/: __init__.py  sobol.py
test_results/european_call_bench/20251228_211230/: results.json  summary.txt
tests/: __init__.py  reference_values.json  test_experiments.py  test_gbm.py  test_greeks.py  test_heston.py  test_heston_calibration.py  test_heston_qe.py  test_implied_vol.py  test_lsm.py  test_monte_carlo.py  test_multi_asset_pricer.py  test_multi_gbm.py  test_multi_payoffs.py  test_path_payoffs.py  test_path_pricing.py  test_payoffs.py  test_qmc.py  test_regression_reference.py  test_validation.py  test_yahoo_market_iv.py
tests/utils/: __init__.py  black_scholes.py
