[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-pricer"
version = "0.1.0"
description = "Production-grade Monte Carlo option pricing engine with variance reduction, Greeks, and stochastic volatility models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Joseph Butler"}
]
keywords = [
    "finance",
    "options",
    "monte-carlo",
    "pricing",
    "quantitative",
    "derivatives",
    "heston",
    "black-scholes",
    "greeks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
mc-price = "mc_pricer.cli:main"

[project.urls]
Homepage = "https://github.com/JosephsCanvas/mc-option-pricing-engine"
Documentation = "https://github.com/JosephsCanvas/mc-option-pricing-engine#readme"
Repository = "https://github.com/JosephsCanvas/mc-option-pricing-engine.git"
Issues = "https://github.com/JosephsCanvas/mc-option-pricing-engine/issues"
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803", "N806"]
"src/mc_pricer/models/gbm.py" = ["N803", "N806"]
"src/mc_pricer/models/heston.py" = ["N803", "N806"]
"src/mc_pricer/pricers/monte_carlo.py" = ["N803", "N806"]
"src/mc_pricer/pricers/lsm.py" = ["N803", "N806", "E731"]
"src/mc_pricer/analytics/black_scholes.py" = ["N803", "N806"]
"src/mc_pricer/analytics/implied_vol.py" = ["N803"]
"src/mc_pricer/greeks/pathwise.py" = ["N803", "N806"]
"src/mc_pricer/greeks/finite_diff.py" = ["N806", "F841"]
"scripts/**/*.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
